# Ira-Lang

./: .gitignore  Cargo.toml  README.md
examples/: countries.ira  fsimmanager_data.ira
examples/football/: countries-schema.ira
src/: error.rs  lib.rs  schemas.rs  types.rs
src/compiler/: mod.rs
src/lexer/: mod.rs
src/parser/: grammar.rs  lexer.rs  mod.rs  validator.rs
src/runtime/: mod.rs
